fixed modal overflow add hideden

--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -24,7 +24,7 @@ body {
       min-width: 900px;
       max-height: 100%;
       max-width: max-content;
-      overflow: auto;
+      overflow: hidden;
       margin: auto;
       position: relative;
       background-color: transparent;
